[!] Fixed the Bug of CTA Sidebar
[*] Screnshot Updated.

----

(June 9, 2015) Version 1.0.9 Styled Themes <www.styledthemes.com>

[+] Fixed the Bug of Double Top Widgets
[*] Jquery Console Error Fixed.

----

(June 19, 2015) Version 1.1.0 Styled Themes <www.styledthemes.com>

[+] Fixed the Bug of Widgets Appearing on Bottom of Pages
[*] Footer Depth Changed to 1
[+] Added Link to Fb page so user can get updates about theme when the queue is long

----

(June 21, 2015) Version 1.1.1 Styled Themes <www.styledthemes.com>

[+] Removed Link to Fb page 


(July 1, 2015) Version 1.1.2 Styled Themes <www.styledthemes.com>

[!] Bug Fix of Blog Page Extra Sidebar

----

(September 18, 2015) Version 1.2.0 Styled Themes <www.styledthemes.com>

[!] WordPress 4.3 Compatibility Bug Fixed
[!] Default Object on Customizer Bug Fixed
[!] Fixed the bug of responsiveness in 1024px width mode
[!] Banner Background Bug Fixed
[x] Removed Tgm Plugin
[+] Default Content for bottom widget of footer
[+] Adding Default Content for Cta widget
----

(September 18, 2015) Version 1.2.1 Styled Themes <www.styledthemes.com>

[!] Default Widgets Loaded on Theme Install

----

(September 21, 2015) Version 1.2.2 Styled Themes <www.styledthemes.com>

[!] Preview Bug Fixed

----

(September 24, 2015) Version 1.2.3 Styled Themes <www.styledthemes.com>

[!] Default Menu bug fixed
[!] Adding Hide option for default content via customizer

----

(November 3, 2015) Version 1.3.0 Styled Themes <www.styledthemes.com>

[!] Fixed the Bug of Blog Page showing only 3 posts

----

(November 29, 2015) Version 1.3.1 Styled Themes <www.styledthemes.com>

[!] Fixed the Bug of having double <title> tag and removed wp_title()

----

(January 19, 2016) Version 1.4.0 Styled Themes <www.styledthemes.com>

[+] Sticky menu Added
[!]	Header menu bug Fixed
[!]	Header image bug fixed 
[!]	Content height bug Fixed

----

(February 3, 2016) Version 1.4.1 Styled Themes <www.styledthemes.com>

[!] Menu in iPad bug fixed