@@ -1,0 +1,1 @@
+<?php die(); ?>{"headers":{"Vary":"Vary: Cookie","Expires":"Expires: Wed, 11 Jan 1984 05:00:00 GMT","Content-Type":"Content-Type: text\/html; charset=UTF-8","Cache-Control":"Cache-Control: no-cache, must-revalidate, max-age=0","Pragma":"Pragma: no-cache","Last-Modified":"Last-Modified: Sat, 03 Sep 2016 09:47:57 GMT"},"uri":"www.yishan-tech.com\/","blog_id":1,"post":0,"key":"www.yishan-tech.com80\/898d12e5fc4a6a4024f248ef23c46f11"}
