@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<?php die(); ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=9">
@@ -28,6 +28,9 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
+<link rel='stylesheet' id='open-sans-css'  href='http://fonts.gmirror.org/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&#038;subset=latin%2Clatin-ext&#038;ver=4.4.2' type='text/css' media='all' />
+<link rel='stylesheet' id='dashicons-css'  href='http://7xrg1x.com1.z0.glb.clouddn.com/wp-includes/css/dashicons.min.css?ver=4.4.2' type='text/css' media='all' />
+<link rel='stylesheet' id='admin-bar-css'  href='http://7xrg1x.com1.z0.glb.clouddn.com/wp-includes/css/admin-bar.min.css?ver=4.4.2' type='text/css' media='all' />
 <link rel='stylesheet' id='rambo-font-awesome-css'  href='http://7xrg1x.com1.z0.glb.clouddn.com/wp-content/themes/rambo/font-awesome/css/font-awesome.css?ver=4.4.2' type='text/css' media='all' />
 <link rel='stylesheet' id='rambo-style-media-css'  href='http://7xrg1x.com1.z0.glb.clouddn.com/wp-content/themes/rambo/css/style-media.css?ver=4.4.2' type='text/css' media='all' />
 <link rel='stylesheet' id='rambo-bootstrap-css'  href='http://7xrg1x.com1.z0.glb.clouddn.com/wp-content/themes/rambo/css/bootstrap.css?ver=4.4.2' type='text/css' media='all' />
@@ -44,12 +47,21 @@ img.emoji {
 <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.yishan-tech.com/xmlrpc.php?rsd" />
 <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://7xrg1x.com1.z0.glb.clouddn.com/wp-includes/wlwmanifest.xml" /> 
 <meta name="generator" content="WordPress 4.4.2" />
+<style type="text/css" media="print">#wpadminbar { display:none; }</style>
+<style type="text/css" media="screen">
+	html { margin-top: 32px !important; }
+	* html body { margin-top: 32px !important; }
+	@media screen and ( max-width: 782px ) {
+		html { margin-top: 46px !important; }
+		* html body { margin-top: 46px !important; }
+	}
+</style>
 <link rel="icon" href="http://7xrg1x.com1.z0.glb.clouddn.com/wp-content/uploads/2016/03/icon.001.png" sizes="32x32" />
 <link rel="icon" href="http://7xrg1x.com1.z0.glb.clouddn.com/wp-content/uploads/2016/03/icon.001.png" sizes="192x192" />
 <link rel="apple-touch-icon-precomposed" href="http://7xrg1x.com1.z0.glb.clouddn.com/wp-content/uploads/2016/03/icon.001.png" />
 <meta name="msapplication-TileImage" content="http://7xrg1x.com1.z0.glb.clouddn.com/wp-content/uploads/2016/03/icon.001.png" />
   </head>
-  <body class="home blog">
+  <body class="home blog logged-in admin-bar no-customize-support">
     <!--Menu Wrapper-->
     <div class="container">
       <div class="navbar">
@@ -66,7 +78,7 @@ img.emoji {
                         </a>
             <!------ end of logo -------->
             <div class="nav-collapse collapse navbar-responsive-collapse ">
-              <ul id="menu-%e8%8f%9c%e5%8d%951" class="nav"><li id="menu-item-42" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-42"><a href="http://www.yishan-tech.com/">首页</a></li>
+              <ul id="menu-%e8%8f%9c%e5%8d%951" class="nav"><li id="menu-item-42" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-42 active"><a href="http://www.yishan-tech.com/">首页</a></li>
 <li id="menu-item-44" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-44"><a href="http://www.yishan-tech.com/index.php/contact/">联系我们</a></li>
 <li id="menu-item-43" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-43"><a href="http://www.yishan-tech.com/index.php/about/">关于我们</a></li>
 </ul>                    
@@ -198,17 +210,58 @@ img.emoji {
       <div class="span3"> 2015 北京移山科技有限公司 </div> 
       <div class="span3"> 京ICP备15066584号  </div>
       <div class="span3">联系邮箱: <a href="mailto:info@yishan-tech.com"> info@yishan-tech.com</a> </div>
-      <div class="span3"> 联系QQ：1524792906</div>
+      <!-- <div class="span3"> 联系QQ：<a href="tencent://message/?uin=1524792906&Site=有事Q我&Menu=yes">1524792906</a></div> -->
+      <div class="span3"> 联系QQ：1524792906 <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1524792906&site=qq&menu=yes"> <img border="0" src="http://wpa.qq.com/pa?p=2:1524792906:51" alt="点击这里给我发消息" title="点击这里给我发消息"/></a></div>
     </div>
           </div>
   </div>
 </div>
 
+<script type='text/javascript' src='http://7xrg1x.com1.z0.glb.clouddn.com/wp-includes/js/admin-bar.min.js?ver=4.4.2'></script>
 <script type='text/javascript' src='http://7xrg1x.com1.z0.glb.clouddn.com/wp-includes/js/wp-embed.min.js?ver=4.4.2'></script>
-</body>
+	<script type="text/javascript">
+		(function() {
+			var request, b = document.body, c = 'className', cs = 'customize-support', rcs = new RegExp('(^|\\s+)(no-)?'+cs+'(\\s+|$)');
+
+			request = true;
+
+			b[c] = b[c].replace( rcs, ' ' );
+			b[c] += ( window.postMessage && request ? ' ' : ' no-' ) + cs;
+		}());
+	</script>
+			<div id="wpadminbar" class="nojq nojs">
+							<a class="screen-reader-shortcut" href="#wp-toolbar" tabindex="1">跳至工具栏</a>
+						<div class="quicklinks" id="wp-toolbar" role="navigation" aria-label="工具栏" tabindex="0">
+				<ul id="wp-admin-bar-root-default" class="ab-top-menu">
+		<li id="wp-admin-bar-wp-logo" class="menupop"><a class="ab-item"  aria-haspopup="true" href="http://www.yishan-tech.com/wp-admin/about.php"><span class="ab-icon"></span><span class="screen-reader-text">关于WordPress</span></a><div class="ab-sub-wrapper"><ul id="wp-admin-bar-wp-logo-default" class="ab-submenu">
+		<li id="wp-admin-bar-about"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/about.php">关于WordPress</a>		</li></ul><ul id="wp-admin-bar-wp-logo-external" class="ab-sub-secondary ab-submenu">
+		<li id="wp-admin-bar-wporg"><a class="ab-item"  href="https://cn.wordpress.org/">WordPress.org</a>		</li>
+		<li id="wp-admin-bar-documentation"><a class="ab-item"  href="https://codex.wordpress.org/">文档</a>		</li>
+		<li id="wp-admin-bar-support-forums"><a class="ab-item"  href="http://zh-cn.forums.wordpress.org/">支持论坛</a>		</li>
+		<li id="wp-admin-bar-feedback"><a class="ab-item"  href="http://zh-cn.forums.wordpress.org/forum/suggestions">反馈</a>		</li></ul></div>		</li>
+		<li id="wp-admin-bar-site-name" class="menupop"><a class="ab-item"  aria-haspopup="true" href="http://www.yishan-tech.com/wp-admin/">移山科技</a><div class="ab-sub-wrapper"><ul id="wp-admin-bar-site-name-default" class="ab-submenu">
+		<li id="wp-admin-bar-dashboard"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/">仪表盘</a>		</li></ul><ul id="wp-admin-bar-appearance" class="ab-submenu">
+		<li id="wp-admin-bar-themes"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/themes.php">主题</a>		</li>
+		<li id="wp-admin-bar-widgets"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/widgets.php">小工具</a>		</li>
+		<li id="wp-admin-bar-menus"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/nav-menus.php">菜单</a>		</li></ul></div>		</li>
+		<li id="wp-admin-bar-customize" class="hide-if-no-customize"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/customize.php?url=http%3A%2F%2Fwww.yishan-tech.com%2F">自定义</a>		</li>
+		<li id="wp-admin-bar-updates"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/update-core.php" title="2个插件更新, 11个主题更新"><span class="ab-icon"></span><span class="ab-label">13</span><span class="screen-reader-text">2个插件更新, 11个主题更新</span></a>		</li>
+		<li id="wp-admin-bar-comments"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/edit-comments.php" title="2条评论待审"><span class="ab-icon"></span><span id="ab-awaiting-mod" class="ab-label awaiting-mod pending-count count-2">2</span></a>		</li>
+		<li id="wp-admin-bar-new-content" class="menupop"><a class="ab-item"  aria-haspopup="true" href="http://www.yishan-tech.com/wp-admin/post-new.php"><span class="ab-icon"></span><span class="ab-label">新建</span></a><div class="ab-sub-wrapper"><ul id="wp-admin-bar-new-content-default" class="ab-submenu">
+		<li id="wp-admin-bar-new-post"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/post-new.php">文章</a>		</li>
+		<li id="wp-admin-bar-new-media"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/media-new.php">媒体</a>		</li>
+		<li id="wp-admin-bar-new-page"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/post-new.php?post_type=page">页面</a>		</li>
+		<li id="wp-admin-bar-new-user"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/user-new.php">用户</a>		</li></ul></div>		</li></ul><ul id="wp-admin-bar-top-secondary" class="ab-top-secondary ab-top-menu">
+		<li id="wp-admin-bar-search" class="admin-bar-search"><div class="ab-item ab-empty-item" tabindex="-1"><form action="http://www.yishan-tech.com/" method="get" id="adminbarsearch"><input class="adminbar-input" name="s" id="adminbar-search" type="text" value="" maxlength="150" /><label for="adminbar-search" class="screen-reader-text">搜索</label><input type="submit" class="adminbar-button" value="搜索"/></form></div>		</li>
+		<li id="wp-admin-bar-my-account" class="menupop with-avatar"><a class="ab-item"  aria-haspopup="true" href="http://www.yishan-tech.com/wp-admin/profile.php">您好，yishantech<img alt='' src='http://2.gravatar.com/avatar/807a68449eb813d8afb45e505b7d7dc2?s=26&#038;d=blank&#038;r=g' srcset='http://2.gravatar.com/avatar/807a68449eb813d8afb45e505b7d7dc2?s=52&amp;d=blank&amp;r=g 2x' class='img-circle avatar-26 photo' height='26' width='26' /></a><div class="ab-sub-wrapper"><ul id="wp-admin-bar-user-actions" class="ab-submenu">
+		<li id="wp-admin-bar-user-info"><a class="ab-item" tabindex="-1" href="http://www.yishan-tech.com/wp-admin/profile.php"><img alt='' src='http://2.gravatar.com/avatar/807a68449eb813d8afb45e505b7d7dc2?s=64&#038;d=blank&#038;r=g' srcset='http://2.gravatar.com/avatar/807a68449eb813d8afb45e505b7d7dc2?s=128&amp;d=blank&amp;r=g 2x' class='img-circle avatar-64 photo' height='64' width='64' /><span class='display-name'>yishantech</span></a>		</li>
+		<li id="wp-admin-bar-edit-profile"><a class="ab-item"  href="http://www.yishan-tech.com/wp-admin/profile.php">编辑我的个人资料</a>		</li>
+		<li id="wp-admin-bar-logout"><a class="ab-item"  href="http://www.yishan-tech.com/wp-login.php?action=logout&#038;_wpnonce=747a9a9658">登出</a>		</li></ul></div>		</li></ul>			</div>
+						<a class="screen-reader-shortcut" href="http://www.yishan-tech.com/wp-login.php?action=logout&#038;_wpnonce=747a9a9658">登出</a>
+					</div>
+
+		</body>
 </html>
 
-<!-- Dynamic page generated in 0.195 seconds. -->
-<!-- Cached page generated by WP-Super-Cache on 2016-09-02 21:24:06 -->
-
-<!-- super cache -->
+<!-- Dynamic page generated in 0.194 seconds. -->
+<!-- Cached page generated by WP-Super-Cache on 2016-09-03 17:47:57 -->
