@@ -18,6 +18,14 @@
     <?php
     /*
     =================================================
+    Move to Top Display
+    =================================================
+    */
+
+    do_action ('fr_move_to_top', 'flat-responsive-pro'); 
+
+    /*
+    =================================================
     Fr Wrapper Choose
     =================================================
     */
