@@ -4,7 +4,7 @@ Theme URI: http://demo.styledthemes.com/pages/flat-responsive.html
 Author: Styled Themes
 Author URI: http://www.styledthemes.com
 Description: For anyone wanting a serious business website, Flat Responsive is the one for you because of what this theme includes. You get responsive design, multiple blog layout options, retina ready graphics, several page templates, post formats, gorgeous typography elements, tons of widget positions, a custom child theme, WooCommerce support, Jetpack support, video tutorials, and more!
-Version: 1.4.1
+Version: 2.0.0
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: flat-responsive
